// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EntityInfo should allow changing the tag wrapping element 1`] = `
<p
  className="passed classnames"
  onClick={[Function]}
>
  <span
    key="1"
  >
    multiple
  </span>
  <b
    key="2"
  >
    children
  </b>
</p>
`;

exports[`EntityInfo should wrap children in a div, passing classname 1`] = `
<div
  className="passed classnames"
  onClick={[Function]}
>
  <span
    key="1"
  >
    multiple
  </span>
  <b
    key="2"
  >
    children
  </b>
</div>
`;
